--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "socket.io": "~0.9.13",
     "mongoose": "~3.5.5",
     "request": "*",
-    "cheerio": "*"
+    "cheerio": "*",
+    "dustjs-linkedin": "*"
   },
   "engines": {
     "node": "0.6.15",
